# aa-shoppingcart

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  QA_REVIEW_SUMMARY.md  README  README.md  SECURITY.md  create_all_file.ps1  create_all_files.py  dependabot.yml  init.py  pull_request_template.md  pyproject.toml  requirements-dev.txt  runtests.py  setup.py  tox.ini  validate_fixes.py
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
shopping_cart/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  decorators.py  forms.py  helpers.py  managers.py  models.py  tasks.py  urls.py  views.py
shopping_cart/migrations/: 0001_initial.py
shopping_cart/static/shopping_cart/css/: shopping_cart.css
shopping_cart/static/shopping_cart/js/: shopping_cart.js
shopping_cart/templates/shopping_cart/: admin_dashboard.html  base.html  create_request.html  index.html  leaderboard.html  marketplace.html  my_claimed_orders.html  my_requests.html  request_detail.html
tests/: test_models.py  test_settings.py
workflows/: docker.yml  publish-pypi.yml  quality.yml  release.yml  test.yml
