[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "allianceauth-shopping-cart"
description = "Player-to-player shopping cart and contract marketplace for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "marketplace",
    "contracts",
]
license = { file = "LICENSE" }
authors = [
    { name = "atthompson13", email = "your.email@example.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Celery",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]
dependencies = [
    "allianceauth>=4.0.0",
    "allianceauth-app-utils>=1.13.0",
    "django-eveuniverse>=1.0.0",
    "django-esi>=4.0.0",
]
optional-dependencies.test = [
    "coverage",
    "django-webtest",
]
urls.Homepage = "https://github.com/atthompson13/aa-shoppingcart"
urls.Source = "https://github.com/atthompson13/aa-shoppingcart"
urls.Tracker = "https://github.com/atthompson13/aa-shoppingcart/issues"

[tool.hatch.version]
path = "shopping_cart/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["shopping_cart"]

[tool.isort]
profile = "django"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "ALLIANCEAUTH",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_allianceauth = ["allianceauth", "esi"]
known_django = ["django"]
skip_gitignore = true

[tool.flake8]
exclude = [".git", "*migrations*", ".tox", "dist", "htmlcov"]
max-line-length = 119
