[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "allianceauth-shopping-cart"
version = "0.1.0"
description = "Player-to-player shopping cart and contract marketplace for Alliance Auth"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "atthompson13", email = "atthompson13@users.noreply.github.com" }
]
maintainers = [
    { name = "atthompson13", email = "atthompson13@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = [
    "allianceauth>=4.0.0,<5.0.0",
    "allianceauth-app-utils>=1.18.0",
    "django-eveuniverse>=1.0.0",
    "django-esi>=4.0.0",
]
keywords = [
    "allianceauth",
    "eveonline",
    "django",
    "marketplace",
    "esi",
    "contract-tracking",
    "logistics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.2",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/atthompson13/aa-shoppingcart"
Documentation = "https://github.com/atthompson13/aa-shoppingcart#readme"
Repository = "https://github.com/atthompson13/aa-shoppingcart"
Issues = "https://github.com/atthompson13/aa-shoppingcart/issues"
Changelog = "https://github.com/atthompson13/aa-shoppingcart/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "shopping_cart/__init__.py"

[tool.hatch.build]
include = [
    "shopping_cart/**/*.py",
    "shopping_cart/static/**/*",
    "shopping_cart/templates/**/*",
    "shopping_cart/migrations/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["shopping_cart"]

[tool.black]
line-length = 119
target-version = ["py38", "py39", "py310", "py311", "py312"]
extend-exclude = "migrations"

[tool.isort]
profile = "black"
line_length = 119
skip = ["migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
